--- a/css/creative.css
+++ b/css/creative.css
@@ -18,6 +18,25 @@ hr.light {
   border-color: #fff;
 }
 
+ul{
+  list-style: none;
+}
+
+#rates{
+  text-align: left;
+  display:flex;
+  justify-content: space-around;
+  font-size: 18px;
+}
+ul .rates{
+  color: white !important;
+}
+.rates{
+  display:flex;
+  flex-direction: column;
+  color:white;
+}
+
 a {
   color: #F05F40;
   -webkit-transition: all 0.2s;
@@ -309,4 +328,8 @@ header.masthead p {
 
 .btn-primary:active, .btn-primary:focus {
   box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
+}
+
+.clients{
+  color:#000000;
 }
